add safelog support

--- a/app/views/users/_logbook_upload_modal.html.erb
+++ b/app/views/users/_logbook_upload_modal.html.erb
@@ -8,6 +8,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
+      <!-- ForeFlight -->
       <div class='row ml-2 mr-md-2 mt-2 h-100'>
         <div class="col-1">
           <%= image_tag('foreFlight.png', height: '40', width: '40') %>
@@ -25,6 +26,7 @@
           <hr>
         </div>
       </div>
+      <!-- LogTen Pro -->
       <div class='row ml-2 mr-md-2 h-100'>
         <div class="col-1">
           <%= image_tag('logtenpro.png', height: '40', width: '40') %>
@@ -42,6 +44,7 @@
           <hr>
         </div>
       </div>
+      <!-- mccPILOTLOG -->
       <div class='row ml-2 mr-md-2 h-100'>
         <div class="col-1">
           <%= image_tag('mccPILOTLOG.png', height: '40', width: '40') %>
@@ -59,6 +62,25 @@
           <hr>
         </div>
       </div>
+      <!-- safeLog -->
+      <div class='row ml-2 mr-md-2 h-100'>
+        <div class="col-1">
+          <%= image_tag('safelog.png', height: '40', width: '40') %>
+        </div>
+        <div class="col-5 my-auto">
+          <div class="lb-provider-name pl-3 pl-md-2">Safelog</div>
+        </div>
+        <div class="col-5 col-md-6 my-auto">
+          <button class='btn float-right provider-btn' id="safelog-lb">Select</button>
+        </div>
+      </div>
+      <%= render 'users/upload_forms/safelog' %>
+      <div class="row ml-2 mr-2">
+        <div class="col-12">
+          <hr>
+        </div>
+      </div>
+      <!-- Manual -->
       <div class='row mb-2 ml-2 mr-md-2 h-100'>
         <div class="col-1">
           <%= image_tag('arelplane.png', height: '40', width: '40') %>
