trying to fix row height on mobile

--- a/app/views/users/_logbook_upload_modal.html.erb
+++ b/app/views/users/_logbook_upload_modal.html.erb
@@ -9,7 +9,7 @@
         </button>
       </div>
       <!-- ForeFlight -->
-      <div class='row ml-2 mr-md-2 mt-2 h-100'>
+      <div class='row ml-2 mr-md-2 mt-2 h-100 upload-row'>
         <div class="col-1">
           <%= image_tag('foreFlight.png', height: '40', width: '40') %>
         </div>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <!-- LogTen Pro -->
-      <div class='row ml-2 mr-md-2 h-100'>
+      <div class='row ml-2 mr-md-2 h-100 upload-row'>
         <div class="col-1">
           <%= image_tag('logtenpro.png', height: '40', width: '40') %>
         </div>
@@ -45,7 +45,7 @@
         </div>
       </div>
       <!-- mccPILOTLOG -->
-      <div class='row ml-2 mr-md-2 h-100'>
+      <div class='row ml-2 mr-md-2 h-100 upload-row'>
         <div class="col-1">
           <%= image_tag('mccPILOTLOG.png', height: '40', width: '40') %>
         </div>
@@ -63,7 +63,7 @@
         </div>
       </div>
       <!-- safeLog -->
-      <div class='row ml-2 mr-md-2 h-100'>
+      <div class='row ml-2 mr-md-2 h-100 upload-row'>
         <div class="col-1">
           <%= image_tag('safelog.png', height: '40', width: '40') %>
         </div>
@@ -81,7 +81,7 @@
         </div>
       </div>
       <!-- Manual -->
-      <div class='row mb-2 ml-2 mr-md-2 h-100'>
+      <div class='row mb-2 ml-2 mr-md-2 h-100 upload-row'>
         <div class="col-1">
           <%= image_tag('arelplane.png', height: '40', width: '40') %>
         </div>
