add button type

--- a/app/views/users/_logbook_upload_modal.html.erb
+++ b/app/views/users/_logbook_upload_modal.html.erb
@@ -17,7 +17,7 @@
           <div class="lb-provider-name pl-3 pl-md-2">ForeFlight</div>
         </div>
         <div class="col-5 col-md-6 my-auto">
-          <button class='btn float-right provider-btn' id="foreflight-lb">Select</button>
+          <button type="button" class='btn float-right provider-btn' id="foreflight-lb">Select</button type="button">
         </div>
       </div>
       <%= render 'users/upload_forms/foreflight' %>
@@ -35,7 +35,7 @@
           <div class="lb-provider-name pl-3 pl-md-2">LogTen Pro</div>
         </div>
         <div class="col-5 col-md-6 my-auto">
-          <button class='btn float-right provider-btn' id="logtenpro-lb">Select</button>
+          <button type="button" class='btn float-right provider-btn' id="logtenpro-lb">Select</button type="button">
         </div>
       </div>
       <%= render 'users/upload_forms/logtenpro' %>
@@ -53,7 +53,7 @@
           <div class="lb-provider-name pl-3 pl-md-2">mccPILOTLOG</div>
         </div>
         <div class="col-5 col-md-6 my-auto">
-          <button class='btn float-right provider-btn' id="mccpilotlog-lb">Select</button>
+          <button type="button" class='btn float-right provider-btn' id="mccpilotlog-lb">Select</button type="button">
         </div>
       </div>
       <%= render 'users/upload_forms/mccpilotlog' %>
@@ -71,7 +71,7 @@
           <div class="lb-provider-name pl-3 pl-md-2">Safelog</div>
         </div>
         <div class="col-5 col-md-6 my-auto">
-          <button class='btn float-right provider-btn' id="safelog-lb">Select</button>
+          <button type="button" class='btn float-right provider-btn' id="safelog-lb">Select</button>
         </div>
       </div>
       <%= render 'users/upload_forms/safelog' %>
