add container fluid to add flights modal

--- a/app/views/users/_logbook_upload_modal.html.erb
+++ b/app/views/users/_logbook_upload_modal.html.erb
@@ -8,90 +8,92 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <!-- ForeFlight -->
-      <div class='row ml-2 mr-md-2 mt-2 h-100'>
-        <div class="col-1">
-          <%= image_tag('foreFlight.png', height: '40', width: '40') %>
-        </div>
-        <div class="col-5 my-auto">
-          <div class="lb-provider-name pl-3 pl-md-2">ForeFlight</div>
-        </div>
-        <div class="col-5 col-md-6 my-auto">
-          <button type="button" class='btn float-right provider-btn' id="foreflight-lb">Select</button type="button">
-        </div>
-      </div>
-      <%= render 'users/upload_forms/foreflight' %>
-      <div class="row ml-2 mr-2">
-        <div class="col-12">
-          <hr>
-        </div>
-      </div>
-      <!-- LogTen Pro -->
-      <div class='row ml-2 mr-md-2 h-100'>
-        <div class="col-1">
-          <%= image_tag('logtenpro.png', height: '40', width: '40') %>
-        </div>
-        <div class="col-5 my-auto">
-          <div class="lb-provider-name pl-3 pl-md-2">LogTen Pro</div>
-        </div>
-        <div class="col-5 col-md-6 my-auto">
-          <button type="button" class='btn float-right provider-btn' id="logtenpro-lb">Select</button type="button">
-        </div>
-      </div>
-      <%= render 'users/upload_forms/logtenpro' %>
-      <div class="row ml-2 mr-2">
-        <div class="col-12">
-          <hr>
-        </div>
-      </div>
-      <!-- mccPILOTLOG -->
-      <div class='row ml-2 mr-md-2 h-100'>
-        <div class="col-1">
-          <%= image_tag('mccPILOTLOG.png', height: '40', width: '40') %>
-        </div>
-        <div class="col-5 my-auto">
-          <div class="lb-provider-name pl-3 pl-md-2">mccPILOTLOG</div>
-        </div>
-        <div class="col-5 col-md-6 my-auto">
-          <button type="button" class='btn float-right provider-btn' id="mccpilotlog-lb">Select</button type="button">
-        </div>
-      </div>
-      <%= render 'users/upload_forms/mccpilotlog' %>
-      <div class="row ml-2 mr-2">
-        <div class="col-12">
-          <hr>
-        </div>
-      </div>
-      <!-- safeLog -->
-      <div class='row ml-2 mr-md-2 h-100'>
-        <div class="col-1">
-          <%= image_tag('safelog.png', height: '40', width: '40') %>
-        </div>
-        <div class="col-5 my-auto">
-          <div class="lb-provider-name pl-3 pl-md-2">Safelog</div>
-        </div>
-        <div class="col-5 col-md-6 my-auto">
-          <button type="button" class='btn float-right provider-btn' id="safelog-lb">Select</button>
-        </div>
-      </div>
-      <%= render 'users/upload_forms/safelog' %>
-      <div class="row ml-2 mr-2">
-        <div class="col-12">
-          <hr>
-        </div>
-      </div>
-      <!-- Manual -->
-      <div class='row mb-2 ml-2 mr-md-2 h-100'>
-        <div class="col-1">
-          <%= image_tag('arelplane.png', height: '40', width: '40') %>
-        </div>
-        <div class="col-5 my-auto">
-          <div class="lb-provider-name pl-3 pl-md-2">
-            Add Flights Manually
+      <div class="container-fluid">
+        <!-- ForeFlight -->
+        <div class='row ml-2 mr-md-2 mt-2 h-100'>
+          <div class="col-1">
+            <%= image_tag('foreFlight.png', height: '40', width: '40') %>
+          </div>
+          <div class="col-5 my-auto">
+            <div class="lb-provider-name pl-3 pl-md-2">ForeFlight</div>
+          </div>
+          <div class="col-5 col-md-6 my-auto">
+            <button type="button" class='btn float-right provider-btn' id="foreflight-lb">Select</button>
           </div>
         </div>
-        <div class="col-5 col-md-6 my-auto">
-          <%= link_to 'Select', new_flight_path, class: 'btn float-right provider-btn' %>
+        <%= render 'users/upload_forms/foreflight' %>
+        <div class="row ml-2 mr-2">
+          <div class="col-12">
+            <hr>
+          </div>
+        </div>
+        <!-- LogTen Pro -->
+        <div class='row ml-2 mr-md-2 h-100'>
+          <div class="col-1">
+            <%= image_tag('logtenpro.png', height: '40', width: '40') %>
+          </div>
+          <div class="col-5 my-auto">
+            <div class="lb-provider-name pl-3 pl-md-2">LogTen Pro</div>
+          </div>
+          <div class="col-5 col-md-6 my-auto">
+            <button type="button" class='btn float-right provider-btn' id="logtenpro-lb">Select</button>
+          </div>
+        </div>
+        <%= render 'users/upload_forms/logtenpro' %>
+        <div class="row ml-2 mr-2">
+          <div class="col-12">
+            <hr>
+          </div>
+        </div>
+        <!-- mccPILOTLOG -->
+        <div class='row ml-2 mr-md-2 h-100'>
+          <div class="col-1">
+            <%= image_tag('mccPILOTLOG.png', height: '40', width: '40') %>
+          </div>
+          <div class="col-5 my-auto">
+            <div class="lb-provider-name pl-3 pl-md-2">mccPILOTLOG</div>
+          </div>
+          <div class="col-5 col-md-6 my-auto">
+            <button type="button" class='btn float-right provider-btn' id="mccpilotlog-lb">Select</button>
+          </div>
+        </div>
+        <%= render 'users/upload_forms/mccpilotlog' %>
+        <div class="row ml-2 mr-2">
+          <div class="col-12">
+            <hr>
+          </div>
+        </div>
+        <!-- safeLog -->
+        <div class='row ml-2 mr-md-2 h-100'>
+          <div class="col-1">
+            <%= image_tag('safelog.png', height: '40', width: '40') %>
+          </div>
+          <div class="col-5 my-auto">
+            <div class="lb-provider-name pl-3 pl-md-2">Safelog</div>
+          </div>
+          <div class="col-5 col-md-6 my-auto">
+            <button type="button" class='btn float-right provider-btn' id="safelog-lb">Select</button>
+          </div>
+        </div>
+        <%= render 'users/upload_forms/safelog' %>
+        <div class="row ml-2 mr-2">
+          <div class="col-12">
+            <hr>
+          </div>
+        </div>
+        <!-- Manual -->
+        <div class='row mb-2 ml-2 mr-md-2 h-100'>
+          <div class="col-1">
+            <%= image_tag('arelplane.png', height: '40', width: '40') %>
+          </div>
+          <div class="col-5 my-auto">
+            <div class="lb-provider-name pl-3 pl-md-2">
+              Add Flights Manually
+            </div>
+          </div>
+          <div class="col-5 col-md-6 my-auto">
+            <%= link_to 'Select', new_flight_path, class: 'btn float-right provider-btn' %>
+          </div>
         </div>
       </div>
     </div>
