add zululog support

--- a/app/views/users/_logbook_upload_modal.html.erb
+++ b/app/views/users/_logbook_upload_modal.html.erb
@@ -81,6 +81,24 @@
             <hr>
           </div>
         </div>
+        <!-- ZuluLog -->
+        <div class='row ml-2 mr-md-2 h-100'>
+          <div class="col-1">
+            <%= image_tag('zululog.png', height: '40', width: '40') %>
+          </div>
+          <div class="col-5 my-auto">
+            <div class="lb-provider-name pl-3 pl-md-2">ZuluLog</div>
+          </div>
+          <div class="col-5 col-md-6 my-auto">
+            <button type="button" class='btn float-right provider-btn' id="zululog-lb">Select</button>
+          </div>
+        </div>
+        <%= render 'users/upload_forms/zululog' %>
+        <div class="row ml-2 mr-2">
+          <div class="col-12">
+            <hr>
+          </div>
+        </div>
         <!-- Manual -->
         <div class='row mb-2 ml-2 mr-md-2 h-100'>
           <div class="col-1">
