--- a/app/views/flights/_upload_form.html.erb
+++ b/app/views/flights/_upload_form.html.erb
@@ -1,7 +1,7 @@
-<div class="row mt-4 ml-2 mr-2" id="zululog-form">
+<div class="row mt-4 ml-2 mr-2" id=<%= name %>-form>
   <div class="col-12">
     <%= form_with(url: :flights, local: true) do |form| %>
-      <%= form.file_field :zululog, class: 'btn form-background form-group' %>
+      <%= form.file_field name, class: 'btn form-background form-group' %>
       <%= form.submit 'Submit', class:'btn btn-primary float-right upload-logbook-btn', disabled: true %>
     <% end %>
   </div>
