trying to make it more clear what to upload

--- a/app/views/flights/_logbook_upload_modal.html.erb
+++ b/app/views/flights/_logbook_upload_modal.html.erb
@@ -3,7 +3,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content pb-2">
       <div class="modal-header">
-        <h5 class="modal-title" id="logbookUpload">Upload a logbook file, or add flights manually</h5>
+        <h5 class="modal-title" id="logbookUpload">Upload a logbook file (typically .CSV), or add flights manually</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
