add logbook pro support

--- a/app/views/flights/_logbook_upload_modal.html.erb
+++ b/app/views/flights/_logbook_upload_modal.html.erb
@@ -22,6 +22,8 @@
         <%= render 'flights/select_lb_provider', name: 'ZuluLog' %>
         <!-- MyFlightbook -->
         <%= render 'flights/select_lb_provider', name: 'MyFlightbook' %>
+        <!-- Logbook Pro -->
+        <%= render 'flights/select_lb_provider', name: 'Logbook Pro' %>
         <!-- Manual -->
         <div class='row mb-2 ml-2 mr-md-2 h-100'>
           <div class="col-1">
