--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -79,8 +79,8 @@ $(document).ready(function(){
           airportCords = [-33.94609832763672, 151.177001953125];
           break;
         case 6:
-          // Ross Island - Antarctica
-          airportCords = [-77.86740112304688, 167.0570068359375];
+          // Dubai - Antarctica looked stupid
+          airportCords = [25.2527999878, 55.3643989563];
       }
       mymap.setView(airportCords, 13);
     } else {
