--- a/app/views/flights/_logbook_upload_modal.html.erb
+++ b/app/views/flights/_logbook_upload_modal.html.erb
@@ -3,13 +3,20 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content pb-2">
       <div class="modal-header">
-        <h5 class="modal-title" id="logbookUpload">Upload a logbook file (typically .CSV), or add flights manually</h5>
+        <h5 class="modal-title" id="logbookUpload">
+          Upload a logbook file, or add flights manually.
+        </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="container-fluid">
         <div class="mt-4"></div>
+        <div class='row ml-2 mr-md-2 mb-4'>
+          <div class="col-12">
+            Need help finding your logbook file? <%= link_to 'See the instructions.', upload_instructions_path, class: 'dark-link' %>
+          </div>
+        </div>
         <!-- ForeFlight -->
         <%= render 'flights/select_lb_provider', name: 'ForeFlight' %>
         <!-- LogTen Pro -->
