--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,7 +1,7 @@
 #user-map {}
 
 .user-map {
-  min-height: 100%;
+  min-height: 100vh;
   min-width: 100%;
 }
 
@@ -111,7 +111,7 @@
   background-color: #7F7F7F;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .user-map {
     min-height: 60vh;
   }
