switch leaflet to yarn and add full screen plugin

--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -21,7 +21,15 @@ $(document).ready(function(){
     opacity:0.15
   }
 
-  var mymap = L.map('mapid', {renderer: L.canvas()});
+  var mymap = L.map('mapid', {
+    renderer: L.canvas(),
+    fullscreenControl: true,
+    // OR
+    fullscreenControl: {
+        pseudoFullscreen: false // if true, fullscreen to page width and height
+    }
+  });
+
   if (whichPage === "homepage") {
     $.getJSON( basePath + "/api/v1/flights", function( data ) {
       renderMap(data);
