--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,5 +22,5 @@
 @import "users";
 @import "select2";
 @import "select2-bootstrap";
-@import "leaflet/dist/leaflet.css";
-@import "leaflet-fullscreen/dist/leaflet.fullscreen.css";
+@import "leaflet/dist/leaflet";
+@import "leaflet-fullscreen/dist/leaflet.fullscreen";
