put extension back

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,4 +23,4 @@
 @import "select2";
 @import "select2-bootstrap";
 @import "leaflet/dist/leaflet";
-@import "leaflet-fullscreen/dist/leaflet.fullscreen";
+@import "leaflet-fullscreen/dist/leaflet.fullscreen.css";
