--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
     <%= csrf_meta_tags %>
     <%= favicon_link_tag 'favicon.ico' %>
     <%= javascript_include_tag 'application' %>
-    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_pack_tag 'application' %>
+    <!-- <%#= stylesheet_pack_tag "stylesheets", media: 'all' %> -->
+    <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= render 'vendors/fb_pixel' %>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,800,900&amp;subset=latin-ext" rel="stylesheet">
   </head>
