garmin pilot added

--- a/app/views/flights/_logbook_upload_modal.html.erb
+++ b/app/views/flights/_logbook_upload_modal.html.erb
@@ -31,6 +31,8 @@
         <%= render 'flights/select_lb_provider', name: 'MyFlightbook' %>
         <!-- Logbook Pro -->
         <%= render 'flights/select_lb_provider', name: 'Logbook Pro' %>
+        <!-- Garmin Pilot -->
+        <%= render 'flights/select_lb_provider', name: 'Garmin Pilot' %>
         <!-- Manual -->
         <div class='row mb-2 ml-2 mr-md-2 h-100'>
           <div class="col-1">
