you can finally add an arbitary number of waypoints when creating a flight manually

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -5,6 +5,8 @@
   <%= paginate @flights, theme: 'bootstrap4' %>
 </div>
 
+<%= link_to 'New Flight', new_flight_path %>
+
 <table class='table table-inverse'>
   <thead>
     <tr>
