--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,7 @@
       <%= render 'users/side_bar' %>
     </div>
     <div class='col-md-9 col-12 remove-lr-padding' id='user-map'>
+      <%= render 'users/share_button' %>
       <div class='user-map' id='mapid'></div>
     </div>
     <div class='col-md-3 col-12 d-md-none remove-lr-padding' id='user-sticky-sidebar'>
