--- a/app/views/users/_share_button.html.erb
+++ b/app/views/users/_share_button.html.erb
@@ -1,13 +1,11 @@
 <nav class="button-share-container">
-  <a target="_blank" href="https://twitter.com/intent/tweet?text=La+mirada+de+Snakeyephoto&url=https://www.surfsearchspot.com/?p=16024" class="buttons" tooltip="Comparte en Twitter"> <i class="fa fa-twitter"></i> </a>
+  <a target="_blank" href="https://twitter.com/intent/tweet?text=Checkout+my+visual+logbook&url=https://www.arelplane.com/users/<%= @user.id %>" class="buttons" tooltip="Share on Twitter"> <i class="fa fa-twitter"></i> </a>
 
-  <a target="_blank" href="mailto:?subject=' + escape('Have a look at this website') + '&body=' + escape('https://www.surfsearchspot.com/?p=16024" class="buttons" tooltip="Comparte por Email"> <i class="fa fa-envelope"></i> </a>
+  <a target="_blank" href="mailto:?subject= Checkout my visual logbook &body=https://www.arelplane.com/users/<%= @user.id %>" class="buttons" tooltip="Share by Email"> <i class="fa fa-envelope"></i> </a>
 
-  <a target="https://plus.google.com/share?url=https://www.surfsearchspot.com/?p=16024" href="#" class="buttons" tooltip="Comparte en Google Plus"> <i class="fa fa-google-plus"></i> </a>
+  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.arelplane.com/users/<%= @user.id %>" class="buttons" tooltip="Share to LikenIn"> <i class="fa fa-linkedin-square"></i> </a>
 
-  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.surfsearchspot.com/?p=16024" class="buttons" tooltip="Comparte en LikenIn"> <i class="fa fa-linkedin-square"></i> </a>
-
-  <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://www.surfsearchspot.com/?p=16024" class="buttons" tooltip="Comparte en Facebook"> <i class="fa fa-facebook"></i> </a>
+  <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://www.arelplane.com/users/<%= @user.id %>" class="buttons" tooltip="Share to Facebook"> <i class="fa fa-facebook"></i> </a>
 
   <a class="buttons"  href="#" onClick="return false;" >
     <span class="buttons" tooltip="Comparte">
