close #44 links are now pink

--- a/app/views/flights/_logbook_upload_modal.html.erb
+++ b/app/views/flights/_logbook_upload_modal.html.erb
@@ -4,7 +4,7 @@
     <div class="modal-content pb-2">
       <div class="modal-header">
         <h5 class="modal-title" id="logbookUpload">
-          Upload a logbook file, or add flights manually.
+          Upload a logbook file (usually .CSV), or add flights manually.
         </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
@@ -14,7 +14,7 @@
         <div class="mt-4"></div>
         <div class='row ml-2 mr-md-2 mb-4'>
           <div class="col-12">
-            Need help finding your logbook file? <%= link_to 'See the instructions.', upload_instructions_path, class: 'dark-link' %>
+            Need help finding your logbook file? <%= link_to 'See the instructions.', upload_instructions_path %>
           </div>
         </div>
         <!-- ForeFlight -->
