--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,3 +1,5 @@
+@import "colors";
+
 html, body {
   height: 100%;
   font-size: 16px;
@@ -13,13 +15,13 @@ body {
 }
 
 a {
-  color: white;
+  color: $primaryLinkColor;
   font-family: 'Nunito', sans-serif;
   font-weight: 200;
 }
 
 .dark-link {
-  color: #191A1A;
+  color: $darkLinkColor;
 }
 
 h6 {
@@ -69,7 +71,7 @@ h6 {
 }
 
 .light-sub-text {
-  color: #C2C2C2;
+  color: $lightSubTextColor;
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 200;
   font-size: 1.12rem;
