update link styling and add share button.

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -1,4 +1,4 @@
-$primaryLinkColor: #F514A6;
+$highlightColor: #F514A6;
 $lightLinkColor: white;
 $darkLinkColor: #191A1A;
 $lightSubTextColor: #C2C2C2;
