--- a/app/assets/stylesheets/share_button.scss
+++ b/app/assets/stylesheets/share_button.scss
@@ -1,3 +1,5 @@
+@import "colors";
+
 .button-share-container {
   bottom: 0;
   position: fixed;
@@ -49,7 +51,7 @@
 .buttons:nth-last-child(1) {
   -webkit-transition-delay: 25ms;
   transition-delay: 25ms;
-  background-color: hsl(321, 92%, 52%);
+  background-color: $highlightColor;
 }
 
 .buttons:not(:last-child):nth-last-child(2) {
@@ -69,13 +71,6 @@
 }
 
 .buttons:not(:last-child):nth-last-child(4) {
-  -webkit-transition-delay: 60ms;
-  transition-delay: 60ms;
-  background-size: contain;
-  background-color: #dd4b39;
-}
-
-.buttons:not(:last-child):nth-last-child(5) {
   -webkit-transition-delay: 80ms;
   transition-delay: 80ms;
   background-size: contain;
@@ -83,7 +78,7 @@
 
 }
 
-.buttons:not(:last-child):nth-last-child(6) {
+.buttons:not(:last-child):nth-last-child(5) {
   -webkit-transition-delay: 100ms;
   transition-delay: 100ms;
   background-size: contain;
@@ -116,31 +111,14 @@
   visibility: visible;
   opacity: 1;
 }
-/* Rotate primary button on hover */
 
-.rotate {
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: -webkit-transform;
-  transition-property: transform;
-}
-
-.rotate {
+.share-logo {
   position: absolute;
-  margin: 15px auto auto 15px;
+  margin: 17px auto auto 17px;
   max-width: 24px;
   width: 24px;
   height: 24px;
   background-image: image-url("share_icon.png");
-  -webkit-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  transform: rotate(90deg);
+  background-repeat: no-repeat;
   background-size: contain;
-}
-
-.button-share-container:hover .rotate {
-  -webkit-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-  transform: rotate(0deg);
-  color: #339900;
 }
