--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,7 +26,7 @@
         </li>
       <% else %>
         <li class="nav-item active">
-          <a href="#" data-toggle='modal' data-target='#loginModal'>Login</a>
+          <a href="#" data-toggle='modal' data-target='#loginModal' class='light_link'>Login</a>
           <%= link_to "register", new_user_registration_path, class: 'btn btn-primary' %>
         </li>
       <% end %>
