--- a/app/views/users/_share_button.html.erb
+++ b/app/views/users/_share_button.html.erb
@@ -3,13 +3,13 @@
 
   <a target="_blank" href="mailto:?subject= Checkout my visual logbook &body=https://www.arelplane.com/users/<%= @user.id %>" class="buttons" tooltip="Share by Email"> <i class="fa fa-envelope"></i> </a>
 
-  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.arelplane.com/users/<%= @user.id %>" class="buttons" tooltip="Share to LikenIn"> <i class="fa fa-linkedin-square"></i> </a>
+  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.arelplane.com/users/<%= @user.id %>" class="buttons" tooltip="Share on LikenIn"> <i class="fa fa-linkedin-square"></i> </a>
 
-  <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://www.arelplane.com/users/<%= @user.id %>" class="buttons" tooltip="Share to Facebook"> <i class="fa fa-facebook"></i> </a>
+  <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://www.arelplane.com/users/<%= @user.id %>" class="buttons" tooltip="Share on Facebook"> <i class="fa fa-facebook"></i> </a>
 
   <a class="buttons"  href="#" onClick="return false;" >
-    <span class="buttons" tooltip="Comparte">
-      <span class="rotate"></span>
+    <span class="buttons" tooltip="Share">
+      <span class="share-logo"></span>
     </span>
   </a>
 </nav>
