--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -27,13 +27,14 @@
     </div>
 
     <div class="mb-3">
+      <%= label :waypoint, "Add Waypoints", class: 'light-sub-text' %><br />
       <%= form.fields_for :waypoints do |waypoint_fields| %>
-        <%= waypoint_fields.label :waypoint, "Add Waypoints", class: 'light-sub-text' %><br />
         <div class="waypoint_fields">
+          <div class="mt-2"></div>
           <%= render 'flights/waypoint_fields', f: waypoint_fields %>
         </div>
-        <a href="#" id="add_waypoint_select">Add another waypoint</a>
       <% end %>
+      <a href="#" id="add_waypoint_select">Add another waypoint</a>
     </div>
 
     <div class="mb-3">
