--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -23,23 +23,23 @@
 
     <div class="mb-3">
       <%= form.label :from_airport, 'Departure Airport (ICAO Code)', class: 'light-sub-text' %><br />
-      <%= form.collection_select :from_id, Location.order(:identifier).page, :id, :identifier, { include_blank: true}, class: 'airport_lookup', style: 'width: 100%;' %>
+      <%= form.collection_select :from_id, Location.order(:identifier).page, :id, :identifier, { include_blank: true}, class: 'identifier_lookup', id: 'departure_airport', style: 'width: 100%;' %>
     </div>
 
     <div class="mb-3">
-      <%= label :waypoint, "Add Waypoints", class: 'light-sub-text' %><br />
+      <%= label :waypoint, "Waypoints", class: 'light-sub-text' %><br />
       <%= form.fields_for :waypoints do |waypoint_fields| %>
         <div class="waypoint_fields">
           <div class="mt-2"></div>
           <%= render 'flights/waypoint_fields', f: waypoint_fields %>
         </div>
       <% end %>
-      <a href="#" id="add_waypoint_select">Add another waypoint</a>
+      <a href="#" id="add_waypoint_select">Add waypoint</a>
     </div>
 
     <div class="mb-3">
       <%= form.label :to_airport, 'Arrival Airport (ICAO Code)', class: 'light-sub-text' %><br />
-      <%= form.collection_select :to_id, Location.order(:identifier).page, :id, :identifier, { include_blank: true}, class: 'airport_lookup', style: 'width: 100%;' %>
+      <%= form.collection_select :to_id, Location.order(:identifier).page, :id, :identifier, { include_blank: true}, class: 'identifier_lookup', id: 'arrival_airport', style: 'width: 100%;' %>
     </div>
 
     <div class="mb-3">
